created data model classes
